# move_detect_cam

./: Cargo.toml
src/: main.rs
